--- a/src/pages/ProfilePage.module.css
+++ b/src/pages/ProfilePage.module.css
@@ -122,7 +122,7 @@
   width: 100%;
 }
 .editBtn:hover {
-  background: var(--clr-primary-dk);
+  background: var(--clr-primary-hover);
 }
 
 .saveBtn {
@@ -137,7 +137,7 @@
   opacity: .6;
 }
 .saveBtn:hover:not(:disabled) {
-  background: var(--clr-primary-dk);
+  background: var(--clr-primary-hover);
 }
 
 .cancelBtn {
